--- a/Rye/RyeExample/Base.lproj/Main.storyboard
+++ b/Rye/RyeExample/Base.lproj/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -68,10 +68,42 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
+                            <tableViewSection headerTitle="Insets" id="ajm-oy-ijE" userLabel="text">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" id="x8v-9X-Zkc">
+                                        <rect key="frame" x="0.0" y="373.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x8v-9X-Zkc" id="keP-ZO-SKV">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="p9S-cJ-7az">
+                                                    <rect key="frame" x="16" y="6" width="94" height="32"/>
+                                                    <connections>
+                                                        <action selector="uniformInsetsChanged:" destination="jYf-jg-epa" eventType="valueChanged" id="HyJ-sH-jJ0"/>
+                                                    </connections>
+                                                </stepper>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1M-uU-5aD">
+                                                    <rect key="frame" x="356" y="11.5" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="p9S-cJ-7az" firstAttribute="leading" secondItem="keP-ZO-SKV" secondAttribute="leading" constant="16" id="agN-jJ-MU6"/>
+                                                <constraint firstItem="a1M-uU-5aD" firstAttribute="centerY" secondItem="keP-ZO-SKV" secondAttribute="centerY" id="lge-2Y-gFM"/>
+                                                <constraint firstItem="p9S-cJ-7az" firstAttribute="centerY" secondItem="keP-ZO-SKV" secondAttribute="centerY" id="tLd-U3-Owc"/>
+                                                <constraint firstAttribute="trailing" secondItem="a1M-uU-5aD" secondAttribute="trailing" constant="16" id="zlE-O4-0TJ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
                             <tableViewSection headerTitle="dismissMode" id="5L7-vb-qIw" userLabel="dismissMode">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="dismissAutomatic" textLabel="ZHY-7y-Xdc" style="IBUITableViewCellStyleDefault" id="GyR-V3-SrM">
-                                        <rect key="frame" x="0.0" y="373.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="473" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GyR-V3-SrM" id="3Zh-PE-bRB">
                                             <rect key="frame" x="0.0" y="0.0" width="370" height="43.5"/>
@@ -88,7 +120,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="dismissGesture" textLabel="Vc1-ix-1x4" style="IBUITableViewCellStyleDefault" id="Vvy-91-nG7">
-                                        <rect key="frame" x="0.0" y="417" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="516.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vvy-91-nG7" id="wNE-Be-sWo">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -105,7 +137,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="dismissNonDismissable" textLabel="6fl-u1-goV" style="IBUITableViewCellStyleDefault" id="4Ie-Fc-Ji7">
-                                        <rect key="frame" x="0.0" y="460.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="560" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Ie-Fc-Ji7" id="XQL-RV-60W">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -126,7 +158,7 @@
                             <tableViewSection headerTitle="viewType" id="PN3-e8-m9y" userLabel="viewType">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="checkmark" indentationWidth="10" textLabel="rET-3b-JzA" style="IBUITableViewCellStyleDefault" id="aPp-Fd-b0n">
-                                        <rect key="frame" x="0.0" y="560" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="659.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aPp-Fd-b0n" id="VCU-YQ-0af">
                                             <rect key="frame" x="0.0" y="0.0" width="370" height="43.5"/>
@@ -143,7 +175,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" textLabel="zbN-OI-SI6" style="IBUITableViewCellStyleDefault" id="dQB-ZN-HOu">
-                                        <rect key="frame" x="0.0" y="603.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="703" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dQB-ZN-HOu" id="5Zu-zP-VGr">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -164,7 +196,7 @@
                             <tableViewSection headerTitle="position" id="I1h-rp-jgL" userLabel="position">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="checkmark" indentationWidth="10" textLabel="KcJ-TM-OWI" style="IBUITableViewCellStyleDefault" id="14G-FV-aDp">
-                                        <rect key="frame" x="0.0" y="703" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="802.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="14G-FV-aDp" id="gYt-tI-z5R">
                                             <rect key="frame" x="0.0" y="0.0" width="370" height="43.5"/>
@@ -181,7 +213,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" textLabel="eIS-SC-g15" style="IBUITableViewCellStyleDefault" id="3Fg-Wy-1k3">
-                                        <rect key="frame" x="0.0" y="746.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="846" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3Fg-Wy-1k3" id="tyi-cQ-RzH">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -202,7 +234,7 @@
                             <tableViewSection headerTitle="animationType" id="EPo-mD-Dnl" userLabel="animationType">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="checkmark" indentationWidth="10" textLabel="PyB-C1-00l" style="IBUITableViewCellStyleDefault" id="YEp-gs-BKj">
-                                        <rect key="frame" x="0.0" y="846" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="945.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YEp-gs-BKj" id="cSS-ZV-9iN">
                                             <rect key="frame" x="0.0" y="0.0" width="370" height="43.5"/>
@@ -219,7 +251,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" textLabel="FC2-AZ-Cl3" style="IBUITableViewCellStyleDefault" id="bmB-qe-XdO">
-                                        <rect key="frame" x="0.0" y="889.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="989" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bmB-qe-XdO" id="e4u-xL-kJR">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -240,7 +272,7 @@
                             <tableViewSection headerTitle="show me" id="4EL-du-N8D" userLabel="show me">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="100" id="Kf2-TO-aQ3">
-                                        <rect key="frame" x="0.0" y="989" width="414" height="100"/>
+                                        <rect key="frame" x="0.0" y="1088.5" width="414" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Kf2-TO-aQ3" id="7rl-MQ-nqH">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
@@ -285,6 +317,8 @@
                     <connections>
                         <outlet property="dismissRyeButton" destination="8ou-wz-e3Y" id="2hk-fM-o5R"/>
                         <outlet property="generateMessageButton" destination="4xz-C0-gCX" id="dyi-Jl-lPO"/>
+                        <outlet property="insetStepper" destination="p9S-cJ-7az" id="Nt1-D5-l53"/>
+                        <outlet property="insetsLabel" destination="a1M-uU-5aD" id="zc4-CJ-fK8"/>
                         <outlet property="ryeMessageTextField" destination="Yfv-08-rut" id="XYm-Pa-JLZ"/>
                     </connections>
                 </tableViewController>
